Complete Java 17 TCP and HTTP SDK (#16)
* checkpoint: preserve native protocol sdk work

* feat: complete Java 17 TCP and HTTP SDK

* chore: validate against FerricStore 0.11.9